# Bundle

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  build.sh  bundle.1  bundle.yaml  dependencies.txt
.github/workflows/: cmake-multi-platform.yml  release.yml
example/: fileServer.py  main.go
src/: bundleInfo.hpp  bundlerInfo.h  bundlerInfo.hpp  main.cpp  parse.cpp  util.cpp
src/addons/: addons.h  addons.hpp  git.cpp
src/delete/: delete.cpp
src/dependencies/: installDependencies.cpp  verifyDependencies.cpp
src/init/: findProject.cpp  initRepo.cpp  main.cpp
src/manifests/: create.cpp  save.cpp  view.cpp
src/memory/: load.cpp  ram.cpp  unload.cpp
src/models/: manifest.cpp  manifest.hpp  ramDisk.cpp  ramDisk.hpp  template.cpp  template.hpp
src/new/: new.cpp
src/process/: findBundle.cpp  parse.cpp
src/run/: getScripts.cpp  listScripts.cpp  main.cpp  runScripts.cpp  viewScript.cpp
src/run/environment/: environment.cpp  manager.cpp  manifest.cpp
src/runtime/: changeDir.cpp
src/system/: ram.cpp
src/util/: system.cpp  system.hpp  terminal.cpp  terminal.hpp
templates/: README.md  hello-world.yaml
templates/init/: bundle.yaml
